# ai-talk

./: .gitignore  README.md  context.md  director.py  models.md  prompt.md  pyproject.toml  pytest.ini
agents/: README.md  agent1.py  agent2.py
ai_docs/: orchestrating_agents.md
prompt/: README.md  decision.sh  fallback.sh  human-loop.sh  metaprompt.xml  plan-execute.sh  pom.xml  schedule.json  self-correct.sh  snowball.sh  workers.sh
specs/: basic_agent_spec.md  director_basic_agent_maker.yaml  director_multi_agent_maker.yaml  multi_agent_spec.md
